--- a/src/client/assets/styles/components.css
+++ b/src/client/assets/styles/components.css
@@ -1,5 +1,7 @@
 .rover-option {
-  @apply text-gray-200 border-gray-200 bg-transparent outline-none border rounded py-2 px-4 hover:bg-white hover:text-gray-900;
+  /* @apply text-gray-200 border-gray-200  hover:bg-white hover:text-gray-900; */
+  @apply bg-transparent outline-none rounded py-2 px-4 border-2 border-gray-900 font-semibold text-gray-900 text-lg block mb-4 mx-auto;
+  width: 200px;
 }
 
 .rover-option.active {
