--- a/src/client/assets/styles/app.css
+++ b/src/client/assets/styles/app.css
@@ -1,5 +1,5 @@
 @import "./tailwind/base.css";
-@import "./layout.css";
+/* @import "./layout.css"; */
 
 @import "./tailwind/components.css";
 @import "./components.css";
